feat(collection): multi definition scope validation
relates to #OPT-5267